Use "sbt run" instead of NettyServer. [finishes #63569076]